--- a/template.yaml
+++ b/template.yaml
@@ -31,6 +31,7 @@ Resources:
         ArchivesTableName: !GetAtt DynamoDB.Outputs.ArchivesTableName
         GamesTableName: !GetAtt DynamoDB.Outputs.GamesTableName
         GamesByEndTimestampIndexName: !GetAtt DynamoDB.Outputs.GamesByEndTimestampIndexName
+        SearchesTableName: !GetAtt DynamoDB.Outputs.SearchesTableName
         ChessDotComUrl: "https://api.chess.com"
         
   Api:
