chore: fix the docker compose file

--- a/src/it/resources/docker-compose.yaml
+++ b/src/it/resources/docker-compose.yaml
@@ -21,8 +21,8 @@ services:
       ]
   
   localstack:
-    container_name: "localstack_main:3.0.1"
-    image: localstack/localstack:latest
+    container_name: "localstack_main"
+    image: localstack/localstack:3.0.1
     ports:
       - "127.0.0.1:4566:4566"            # LocalStack Gateway
       # - "127.0.0.1:4510-4559:4510-4559"  # ext services port range
